# ESP32-WROOM-32

./: .gitignore  README.md
APP/: android_release.keystore
APP/MIMO/: CMakeLists.txt  Main.qml  bluetoothcontroller.cpp  bluetoothcontroller.h  call_ai.cpp  call_ai.h  cv_controller.cpp  cv_controller.h  datamanager.cpp  datamanager.h  imageprovider.cpp  imageprovider.h  main.cpp  speechrecognizer.cpp  speechrecognizer.h  udp.cpp  udp.h
APP/MIMO/android/: AndroidManifest.xml
APP/MIMO/components/: DeviceControl.qml  EventsBarChart.qml  Home.qml  LoginOn.qml  RoomsPage.qml
APP/MIMO/resources/: config.ini
APP/mimo1.0/Mimo/: Mimo.pro  MusicPlayer.cpp  MusicPlayer.h  bluetoothmanager.cpp  bluetoothmanager.h  error.cpp  error.h  error.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
APP/mimo1.0/Mimo/android/: AndroidManifest.xml
esp32_app/esp32_app/: BlueTooth_Connect.h  I2S.h  LightController.cpp  LightController.h  Microphone.h  MusicPlayer.h  Singleton.h  VoiceA2DP.h  WiFi_Connect.h  const.h  esp32_app.ino  mkf.h  oled.h  wav_data.h
esp32_oled/: esp32_oled.ino
esp32_oled_test/esp32_oled/: esp32_oled.ino
libraries/ESP32-A2DP/examples/bt_music_receiver_arduino_i2s_3/: bt_music_receiver_arduino_i2s_3.ino
libraries/ESP8266_and_ESP32_OLED_driver_for_SSD1306_displays/examples/SSD1306UiDemo/: SSD1306UiDemo.ino
test/INMP441_test/: INMP441_test.ino
test/Max98357a_test/: Max98357a_test.ino  wav_data.h
test/bluetooth_text/bluetooth_test/: bluetooth_test.ino
test/esp32_oled_test/esp32_oled/: esp32_oled.ino
wifi_test/wifi/: wifi.ino
